# glBoilerplate

./: .gitignore  CMakeLists.txt  README.md
cmake/: FindSDL2.cmake
shaders/: bump.frag  bump.vert  imgui_330.frag  imgui_330.vert  relief.frag  relief.vert  simple.frag  simple.vert
src/core/: Camera.cpp  Camera.hpp  Chunk.hpp  LoaderComponent.cpp  LoaderComponent.hpp  PerspectiveRenderComponent.cpp  PerspectiveRenderComponent.hpp  RenderInfo.hpp  ResourcePool.cpp  ResourcePool.hpp  Scene.cpp  Scene.hpp  SceneComponent.hpp  SceneDetail.hpp  Shader.cpp  Shader.hpp  Texture.cpp  Texture.hpp  Voxel.hpp  VoxelModel.cpp  VoxelModel.hpp  VoxelType.hpp
src/tools/: GuiController.hpp  elementViewer.cpp  sceneViewer.cpp
src/util/: fastMath.hpp  fileReader.cpp  fileReader.hpp
